4.0.15
New Function Compile-AppWithoutDocker, to compile an app without using containers.
Add parameter doNotUseDocker to Run-AlPipeline to allow building apps and test apps without using docker containers
Add parameter doNotBuildImage to New-BcImage to not build the image, but instead populate a folder with the DOCKERFILE and more for creating the image
Throw more describing error when New-BcAuthContext fails

4.0.14
Issue #2896 Compile-AppInBcContainer can't read appId from dependencies

4.0.13
Issue #2891 NextMajor builds are broken - New-BcImage fixes

4.0.12
Issue #2891 NextMajor builds are broken

4.0.11
Search for <appid>.disabledTests.json under basefolder in Run-AlPipeline and use as disabled tests
Check whether the app is already installed in Publish-PerTenantExtensionApps
Issue #2849 Issue a warning when trying to create a container with SSL and process isolation on Windows 11
Issue #2848 Run-AlPipeline do not import Test Tool Kits if no appfolders+testfolders are present
Issue #2853 Set the cu in artifact manifest for newer nav 2018 artifacts
Issue #2859 Do not crash if emitting telemetry fails, write instructions instead.
Issue #2861 Publish-PerTenantExtensionApps failing using the Prerelease module
Issue #2858 Publish to Dev Scope with upgrade causes dependency issues
Issue #2868 New-BcImage with 21.0 and TestToolkit installed won't work without specifying license
Issue #2867 Compile-AppInBCContainer not using Application ID on downloading symbols
Issue #2865 NavSip.dll missing
Issue #2864 Flush-ContainerHelperCache unexpectedly removes an image
Issue #2760 Database connection string not used in New-BcContainerWizard on Azure VM
JIT Install dotnet 6.0.13 if Generic image 1.0.2.13 or below is used for Business Central version 22 or above
Issue #2783 Run-AlValidation doesnt accept Third-Party Runtime-App